--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,11 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+    //PostgreSQL
+    implementation 'org.postgresql:postgresql:42.7.4'
+    //Flyway
+    implementation 'org.flywaydb:flyway-core'
+
     //test
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
     testImplementation 'io.rest-assured:rest-assured'
